# wechat-push-server-rs

./: .dockerignore  .gitignore  Cargo.toml  Makefile  config.toml  docker-compose.yml
.github/workflows/: build-and-test.yml  rust.yml
config/: .gitignore  config.ci.local.toml.gpg  config.ci.toml  config.default.toml  config.testing.toml  decrypt.sh  encrypt.sh  log4rs.yml
migrations/2020-04-08-013441_create_messages/: up.sql
src/: config.rs  errors.rs  logging.rs  main.rs  models.rs  schema.rs  shared_state.rs  tests_setup.rs  utils.rs
src/errors/: error.rs  mod.rs  response.rs
src/routes/: mod.rs  scene.rs
src/routes/callback/: errors.rs  mod.rs  routes.rs  verification.rs  xml_parse.rs
src/routes/message/: actions.rs  mod.rs  routes.rs
src/wechat/: errors.rs  mod.rs  qrcode.rs  request.rs  template_message.rs  token.rs
src/wechat/template_message/: apis.rs  mod.rs  models.rs
tests/: test.sh  test_scene.py  test_server.py
