[package]
name = "server-rs"
version = "0.1.0"
authors = ["gwy15 <gwy15thu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# core
actix = "0.9.0"
actix-web = "2.0"
actix-rt = "1.0"
serde_json = "1.0.51"
# logging
log = "0.4.8"
env_logger = "0.7.1"
chrono = "0.4.11"
# error handling
failure = "0.1.7"
actix-threadpool = "0.3.1"
# configuration
config = "0.10.1"
serde = "1.0.106"
serde_derive = "1.0.106"

# test
tokio = { version = "0.2.16", features = ["full"] }

# wechat related
rand = "0.7.3"
reqwest = { version = "0.10.4", features = ["json"] }
rust-crypto = "0.2.36"
xml-rs = "0.8.2"

# redis
redis = "0.15.1"
# SQL
r2d2 = "0.8.8"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuidv07"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
